--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,4 +54,4 @@ jobs:
 
       - name: Run tests
         run: |
-          esphome run tests/${{ matrix.test }}
+          esphome compile tests/${{ matrix.test }}
